--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "engines": {
     "node": "12"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "author": "Marcos Campos",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^17.0.21",
+    "typescript": "^4.6.2"
+  }
 }
