--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "📝 Application to help you focus on your daily activities.",
   "main": "index.js",
+  "author": "Marcos Campos",
   "engines": {
     "node": "12"
   },
   "scripts": {},
-  "author": "Marcos Campos",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "eslint": "^8.11.0",
     "typescript": "^4.6.2"
   }
 }
