--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "node": "12"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:staged": "npm test -- --findRelatedTests"
   },
   "license": "ISC",
   "devDependencies": {
