test: ensure SignUpController return 400 if Validation returns false

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,8 @@
 	"plugins": [
 		"@typescript-eslint"
 	],
-	"rules": {}
+	"rules": {
+    "no-undef": "off",
+    "space-before-function-paren": "off"
+  }
 }
