--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
 	],
 	"rules": {
     "no-undef": "off",
-    "space-before-function-paren": "off"
+    "space-before-function-paren": "off",
+    "no-useless-constructor": "off",
+    "no-use-before-define": "off"
   }
 }
