test: ensure SignUpController calls CreateUserService with correct values

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "no-undef": "off",
     "space-before-function-paren": "off",
     "no-useless-constructor": "off",
-    "no-use-before-define": "off"
+    "no-use-before-define": "off",
+    "no-redeclare": "off"
   }
 }
