refactor: move SignUpController, interfaces and types to its own files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "space-before-function-paren": "off",
     "no-useless-constructor": "off",
     "no-use-before-define": "off",
-    "no-redeclare": "off"
+    "no-redeclare": "off",
+    "import/export": "off"
   }
 }
