--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "docker:test:up": "docker-compose -f docker-compose.test.yml up -d",
-    "prisma:test:dev": "dotenv -e .env.test -- prisma migrate dev",
+    "prisma:dev": "prisma migrate dev",
+    "docker:test:up": "docker-compose -f docker-compose.test.yml up -d && dotenv -e .env.test -- npm run prisma:dev",
     "test": "dotenv -e .env.test -- jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:staged": "npm test -- --findRelatedTests",
