--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "prisma:dev": "prisma migrate dev",
+    "prisma:test": "dotenv -e .env.test -- prisma migrate dev",
     "docker:test:up": "docker-compose -f docker-compose.test.yml up -d && dotenv -e .env.test -- npm run prisma:dev",
     "test": "dotenv -e .env.test -- jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
