--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Marcos Campos",
   "license": "MIT",
   "engines": {
-    "node": "12"
+    "node": "16"
   },
   "prisma": {
     "schema": "src/infra/schema.prisma"
@@ -24,10 +24,11 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@faker-js/faker": "^6.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@types/node": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "dotenv-cli": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
@@ -42,6 +43,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "@prisma/client": "^3.11.0"
+    "@prisma/client": "^3.11.0",
+    "bcrypt": "^5.0.1"
   }
 }
