--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@faker-js/faker": "^6.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.22",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.11.0",
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
