--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.22",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "dotenv-cli": "^5.0.0",
@@ -40,6 +41,7 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
     "prisma": "^3.11.0",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
