--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "docker:test:up": "docker-compose -f docker-compose.test.yml up -d && npm run prisma:test",
     "test": "dotenv -e .env.test -- jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
   },
