--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://test:test@localhost:5432/test_db"
+DATABASE_URL="postgresql://test:test@localhost:5433/test_db?schema=public"
