--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "scripts": {
     "prepare": "husky install",
     "prisma:test": "dotenv -e .env.test -- prisma migrate dev",
-    "docker:test:up": "docker-compose -f docker-compose.test.yml up -d && npm run prisma:test",
+    "prisma:dev": "prisma migrate dev",
     "test": "dotenv -e .env.test -- jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage"
+    "test:ci": "npm test -- --coverage",
+    "docker:up": "docker-compose -f docker-compose.yml up -d",
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main/server.ts"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
@@ -45,6 +47,8 @@
     "prisma": "^3.11.0",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.2"
   },
   "dependencies": {
