--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.22",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "dotenv-cli": "^5.0.0",
@@ -55,6 +56,7 @@
     "@prisma/client": "^3.11.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "validator": "^13.7.0"
   }
 }
