--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "docker:up": "docker-compose -f docker-compose.yml up -d",
-    "dev": "ts-node-dev --respawn --transpile-only --exit-child -r tsconfig-paths/register src/main/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --exit-child -r tsconfig-paths/register src/main/server.ts",
+    "build": "rimraf dist && tsc -p tsconfig-build.json && tsc-alias -p tsconfig-build.json",
+    "start": "node dist/main/server.js"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
@@ -49,6 +51,7 @@
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
+    "tsc-alias": "^1.6.5",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.2"
   },
