--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.22",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
@@ -60,6 +61,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.4",
     "pino": "^7.9.2",
     "pino-pretty": "^7.6.0",
     "validator": "^13.7.0"
