--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   ],
   "rules": {
     "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"],
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "no-redeclare": "off",
