feat: implements SendEmailConfirmation in SignUpController

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,8 @@
 DATABASE_URL="postgresql://test:test@localhost:5433/test_db?schema=public"
 LOG_DISABLED=true
+
+MAIL_FROM="smtp.mailtrap.io"
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT=2525
+MAIL_PASSWORD="660dedd174c71f"
+MAIL_USERNAME="0582842759e264"
