--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
     "no-undef": "off",
     "no-use-before-define": "off",
     "no-console": "off",
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "no-shadow": "off"
   }
 }
