--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^17.0.22",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
@@ -65,6 +66,7 @@
     "nodemailer": "^6.7.4",
     "pino": "^7.9.2",
     "pino-pretty": "^7.6.0",
+    "swagger-ui-express": "^4.4.0",
     "validator": "^13.7.0"
   }
 }
